# auto_brainrot

./: .gitignore  Dockerfile.dev  README.md  docker-compose.yaml
orchestrator/: .gitignore  pyproject.toml
orchestrator/scripts/: init_db.sh  start_airflow.sh
orchestrator/src/orchestrator/dags/: my_python_operator.py
orchestrator/src/orchestrator/tasks/: polly_tts_task.py  reddit_scraper_task.py
scraper/: .gitignore  pyproject.toml
scraper/src/scraper/: database.py  kinesis.py  main.py  models.py  post_scraper.py  reddit.py  subreddit_scraper.py  writers.py
speech/: .gitignore  pyproject.toml
speech/src/speech/: constants.py  main.py  models.py
speech/src/speech/inputs/: tts_input.py
speech/src/speech/readers/: kinesis.py
speech/src/speech/synthesizers/: abstract_speech_synthesizer.py  aws_speech_synthesizer.py
